Add the PoiTypeChooser view

--- a/android-project/AndroidManifest.xml
+++ b/android-project/AndroidManifest.xml
@@ -63,6 +63,12 @@
       android:name=".AboutActivity"
       android:configChanges="keyboardHidden|orientation"
     />
+    
+    <activity
+      android:name=".PoiTypeChooserActivity"
+      android:configChanges="keyboardHidden|orientation"
+    />
+    
 
   </application>
 
