--- a/android-project/.classpath
+++ b/android-project/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="lib" path="libs/jackson-core-asl-1.9.1.jar"/>
 	<classpathentry kind="lib" path="libs/jackson-mapper-asl-1.9.1.jar"/>
+	<classpathentry kind="lib" path="libs/apache-mime4j-0.6.jar"/>
+	<classpathentry kind="lib" path="libs/httpmime-4.0.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
