--- a/android-project/.classpath
+++ b/android-project/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="libs/jackson-mapper-asl-1.9.1.jar"/>
 	<classpathentry kind="lib" path="libs/apache-mime4j-0.6.jar"/>
 	<classpathentry kind="lib" path="libs/httpmime-4.0.1.jar"/>
+	<classpathentry kind="lib" path="libs/overlaymanager-1.0.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
