Working on the web services.

--- a/server-project/war/WEB-INF/logging.properties
+++ b/server-project/war/WEB-INF/logging.properties
@@ -19,10 +19,10 @@
 #
 
 # Set the default logging level for all loggers to WARNING
-.level = INFO
+.level = FINE
 
 # The REST services
-apackage.anme.server.ReparonsParisApplication.level = FINE
+net.team10.server.ReparonsParisApplication.level = FINE
 
 # The Restlet settings
 javax.servlet.ServletContext.level = WARNING
