Starts working on Declaration of an Poi report.

--- a/android-project/AndroidManifest.xml
+++ b/android-project/AndroidManifest.xml
@@ -81,6 +81,11 @@
       android:configChanges="keyboardHidden|orientation"
     />
     
+    <activity
+      android:name=".CreatePoiReportActivity"
+      android:configChanges="keyboardHidden|orientation"
+    />
+    
 
   </application>
 
