Create PoiReportsGroups view

--- a/android-project/AndroidManifest.xml
+++ b/android-project/AndroidManifest.xml
@@ -71,6 +71,11 @@
       android:configChanges="keyboardHidden|orientation"
     />
     
+    
+    <activity
+      android:name=".PoiReportsGroupsActivity"
+      android:configChanges="keyboardHidden|orientation"
+    />
     <activity
       android:name=".PoiTypeChooserActivity"
       android:configChanges="keyboardHidden|orientation"
