--- a/android-project/AndroidManifest.xml
+++ b/android-project/AndroidManifest.xml
@@ -89,6 +89,7 @@
     <activity
       android:name=".CreatePoiReportActivity"
       android:configChanges="keyboardHidden|orientation"
+      android:screenOrientation="portrait"
     />
     
 
